--- a/package.json
+++ b/package.json
@@ -8,11 +8,18 @@
   ],
   "author": "Thomas Hodges",
   "license": "MIT",
+  "scripts": {
+    "test": "./node_modules/.bin/_mocha --timeout 0"
+  },
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "node-cron": "^2.0.3",
     "request": "^2.88.0",
     "request-promise": "^4.2.4"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.2.2"
   }
 }
