--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Thomas Hodges",
   "license": "MIT",
   "scripts": {
-    "test": "./node_modules/.bin/_mocha --timeout 0"
+    "lint": "yarn eslint .",
+    "test": "yarn _mocha --timeout 0"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -21,6 +22,12 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "eslint": "^6.5.1",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "mocha": "^7.1.2"
   }
 }
